# koda

./: CMakeLists.txt  README.md
src/koda/math/: calc.c  calc.h  kmath.h
src/koda/types/: hash.c  kodat.h  set.c
src/test/: main.c  math.c  math.h  types.c  types.h
